--- a/src/component/Dashboard/Dashboard.css
+++ b/src/component/Dashboard/Dashboard.css
@@ -1,70 +1,52 @@
-.dashboard-container {
+.streams {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  margin: 50px auto;
-  max-width: 1000px;
-}
-
-.videos-container {
-  flex-basis: 60%;
-  padding-right: 30px;
 }
 
 .video {
-  display: flex;
-  align-items: center;
-  margin-bottom: 30px;
-  cursor: pointer;
+  width: 23%;
+  margin-bottom: 20px;
 }
 
 .video-thumbnail {
-  flex-basis: 30%;
-  margin-right: 20px;
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 56.25%;
 }
 
 .video-thumbnail img {
-  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.video-details {
-  flex-basis: 70%;
+.video-info {
+  margin-top: 5px;
+  font-size: 14px;
+  text-align: center;
 }
 
 .username {
-  font-size: 14px;
   font-weight: bold;
-  margin-right: 10px;
 }
 
 .video-title {
-  font-size: 18px;
-  font-weight: bold;
+  margin-top: 5px;
 }
 
-.video-player-container {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 9999;
+/* search */
+.search-bar{
+  width: 300px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.7);
 }
 
-.video-player-wrapper {
-  position: relative;
-  max-width: 800px;
-  max-height: 80vh;
-}
-
-.video-player-wrapper button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-.hidden-link {
-  display: none;
+/* crousel */
+.crousel{
+  width: 100%;
+height: 500px;
 }
