--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -42,3 +42,20 @@
     color: #f44336;
   }
   
+
+  /* search */
+
+.navbar-search {
+    display: flex;
+    align-items: center;
+    margin-left: 148px;
+}
+  
+.navbar-search input[type="text"] {
+    padding: 8px;
+    border: none;
+    border-radius: 20px;
+    background-color: #f0f0f0;
+    font-size: 1rem;
+    width: 500px;
+}
