--- a/src/component/form/SignUp/Signup.css
+++ b/src/component/form/SignUp/Signup.css
@@ -1,27 +1,29 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #0F121FF5;
+  overflow-y: hidden;
+  height: 100vh;
+}
   
   .tunerImg {
-    width: 100vh;
     position: absolute;
-    right: 727px;
+    right: 808px;
   }
   
   .pic {
-    position: relative;
-    width: 100vh;
-    height:auto;
+    height: 100vh;
   }
   
   .register {
-    margin-top: 1rem;
-    font-size: 3rem;
-    text-align: center;
+    color: #eaeaea;
+    font-size: 35px;
+    border: none;
+    right: 1px;
+    position: relative;
   }
   
   .form {
@@ -30,17 +32,42 @@
     align-items: center;
     margin-top: 1rem;
     position: absolute;
-    right: 96px;
+    right: 290px;
+  }
+  .form-input{
+    text-align: end;
+    position: relative;
   }
   
-  .name,
-  .email,
-  .password,
-  .cp,
-  .phone,
+  .name{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    color: white;
+  }
+  .email{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    color: white;
+  }
+  .password{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    color: white;
+  }
+  .cp{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    color: white;
+  }
+  .phone{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    color: white;
+  }
   .pr {
     font-size: 1.2rem;
     margin-top: 1rem;
+    color: white;
   }
   
   input[type='text'],
@@ -56,7 +83,7 @@
   }
   
   .button {
-    background-color: #1565c0;
+    background-color: #C4B4F8;
     color: white;
     padding: 0.5rem 1.5rem;
     border: none;
@@ -69,8 +96,12 @@
   .text-info {
     margin-top: 1rem;
     font-size: 1rem;
+    position: relative;
     text-align: center;
     text-decoration: none;
+    right: 774px;
+    top: 64px;
+    color: white;
   }
   
   .text-info:hover {
