--- a/src/component/my-video/My-video.css
+++ b/src/component/my-video/My-video.css
@@ -66,7 +66,22 @@
     height: 100vh;
     padding: 20px;
 }
-
+.save{
+    position: relative;
+    padding: 10px;
+    top: 39px;
+    left: 202px;
+}
+.delete{
+    position: relative;
+    right: 307px;
+    padding: 10px;
+    top: 39px;
+}
+.d{
+    right: 336px;
+    position: relative;
+}
 /* Left container */
 .video-grid1 {
     display: grid;
