--- a/src/component/Dashboard/Dashboard.css
+++ b/src/component/Dashboard/Dashboard.css
@@ -35,7 +35,10 @@ body{
 }
 
 .username {
-  font-weight: bold;
+  margin-right: 10px;
+  font-size: 20px;
+  text-decoration: underline;
+  text-transform: uppercase;
 }
 
 .video-title {
@@ -44,10 +47,7 @@ body{
 
 /* search */
 .search-bar{
-  width: 500px;
-  display: flex;
-  align-items: center;
-  position: relative;
+  width: 900px;
 }
 /* .form-group {
   display: flex;
@@ -63,4 +63,16 @@ body{
 .crousel{
   width: 100%;
 height: 500px;
+}
+
+.carousel-details span.username {
+  margin-right: 10px;
+  font-size: 20px;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.carousel-details span.carousel-title {
+  margin-left: 10px;
+  color: aliceblue;
 }
